2016-06-16  Myles C. Maxfield  <mmaxfield@apple.com>

        Sporadic crash in HashTableAddResult following CSSValuePool::createFontFamilyValue
        https://bugs.webkit.org/show_bug.cgi?id=158297

        Reviewed by Darin Adler.

        * fast/text/placeholder-renderstyle-null-font-expected.txt: Added.
        * fast/text/placeholder-renderstyle-null-font.html: Added.

2016-06-15  Keith Miller  <keith_miller@apple.com>

        Add support for Symbol.isConcatSpreadable (round 2)
        https://bugs.webkit.org/show_bug.cgi?id=158769

        Reviewed by Mark Lam.

        Fix tests for Symbol.isConcatSpreadable. Also, add new test that
        the array species construction does not use the callees' global
        object's Array[Symbol.species] when given an array from another
        global object.

        * js/Object-getOwnPropertyNames-expected.txt:
        * js/array-species-different-globalobjects.html:
        * js/dom/array-prototype-properties-expected.txt:
        * js/script-tests/Object-getOwnPropertyNames.js:

2016-06-15  Zalan Bujtas  <zalan@apple.com>

        Decouple the percent height and positioned descendants maps.
        https://bugs.webkit.org/show_bug.cgi?id=158773

        Reviewed by David Hyatt and Chris Dumez.

        Various dynamic containing block changing tests.

        * fast/block/fixed-position-reparent-when-transition-is-removed.html:
        * fast/block/positioning/change-containing-block-for-absolute-positioned-expected.txt: Added.
        * fast/block/positioning/change-containing-block-for-absolute-positioned.html: Added.
        * fast/block/positioning/change-containing-block-for-fixed-positioned-expected.txt: Added.
        * fast/block/positioning/change-containing-block-for-fixed-positioned.html: Added.

2016-06-15  Tim Horton  <timothy_horton@apple.com>

        <attachment> elements jump around a lot around when subtitle text changes slightly
        https://bugs.webkit.org/show_bug.cgi?id=158818